Fix : FindBugs warnings